[package]
name = "alator"
version = "0.2.8"
authors = ["Calum Russell <calum.mj.russell@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
time = { version = "0.3.17", features = ["macros", "parsing"] }
rand = "0.8.4"
rand_distr = "0.4.1"
log = "0.4.17" 
env_logger = "0.10.0"

[dev-dependencies]
reqwest = { version = "0.11.11", features=["blocking"] }
zip = "0.6.2"
csv = "1.1.6"
criterion = "0.5.1"

[lib]
bench = false

[[bench]]
name = "sim_benchmark"
harness = false
