[package]
name = "alator"
version = "0.2.11"
authors = ["Calum Russell <calum.mj.russell@gmail.com>"]
edition = "2021"

[dependencies]
itertools = "0.11.0"
time = { version = "0.3.17", features = ["macros", "parsing"] }
rand = "0.8.4"
rand_distr = "0.4.1"
log = "0.4.17" 
env_logger = "0.10.0"
pyo3 = { version = "0.19.0", optional = true }

[dev-dependencies]
reqwest = { version = "0.11.11", features=["blocking"] }
zip = "0.6.2"
csv = "1.1.6"
criterion = "0.5.1"

[features]
python = ["dep:pyo3"] 

[lib]
bench = false

[[bench]]
name = "sim_benchmark"
harness = false
