[package]
name = "rotala-http"
version = "0.4.1"
edition = "2021"
authors = ["Calum Russell <calum.mj.russell@gmail.com>"]
license-file = "LICENCE"
description = "JSON server exchange and library for backtesting trading strategies"
repository = "https://github.com/calumrussell/alator"
readme = "README.md"
rust-version = "1.75"

[dependencies]
actix-web = "4"
time = { version = "0.3.17", features = ["macros", "parsing"] }
rand = "0.8.4"
rand_distr = "0.4.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
zip = "2.1.3"
csv = "1.1.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
derive_more = { version = "1.0.0", features = ["full"] }
anyhow = "1.0.86"
rotala = { path = "../rotala/" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bin]]
name = "uist_server_v1"
path = "./src/bin/uist_server_v1.rs"

[[bin]]
name = "uist_server_v2"
path = "./src/bin/uist_server_v2.rs"
