[package]
name = "rotala"
version = "0.4.1"
edition = "2021"
authors = ["Calum Russell <calum.mj.russell@gmail.com>"]
license-file = "LICENCE"
description = "JSON server exchange and library for backtesting trading strategies"
repository = "https://github.com/calumrussell/alator"
readme = "README.md"
rust-version = "1.75"

[dependencies]
time = { version = "0.3.17", features = ["macros", "parsing"] }
rand = "0.8.4"
rand_distr = "0.4.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
zip = "2.1.3"
csv = "1.1.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.91"
tokio-postgres = "0.7.12"
tokio-pg-mapper = { version = "0.2.0", features = ["derive"] }
deadpool-postgres = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[lib]
bench = false

[[bench]]
name = "sim_orderbook"
harness = false
