[package]
name = "alator-exchange"
version = "0.0.1"
edition = "2021"

[lib]
name = "alator_exchange"
path = "src/lib.rs"

[[bin]]
name = "alator-exchange-server"
path = "src/bin/server.rs"

[[bin]]
name = "alator-exchange-example-client"
path = "src/bin/example_client.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = "0.10.2"
alator-clock = { path = "../alator-clock" }
tower = { version = "0.4" }

[build-dependencies]
tonic-build = "0.10"
