[package]
name = "rotala"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
time = { version = "0.3.17", features = ["macros", "parsing"] }
rand = "0.8.4"
rand_distr = "0.4.1"
reqwest = { version = "0.11.11", features=["blocking"] }
zip = "0.6.2"
csv = "1.1.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
env_logger = "0.10.0"

[[bin]]
name = "uist_server_test"
path = "./src/bin/uist_server_test.rs"