[package]
name = "alator"
version = "0.4.1"
authors = ["Calum Russell <calum.mj.russell@gmail.com>"]
edition = "2021"
license-file = "LICENCE"
description = "Library for backtesting investment strategies"
repository = "https://github.com/calumrussell/alator"
readme = "README.md"

[dependencies]
itertools = "0.13.0"
time = { version = "0.3.17", features = ["macros", "parsing"] }
rand = "0.8.4"
rand_distr = "0.4.1"
log = "0.4.17"
env_logger = "0.11.0"
pyo3 = { version = "0.22.1", optional = true }
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
rotala = { path = "../../rotala/" }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
zip = "2.2.0"
csv = "1.1.6"
criterion = { version = "0.5.1", features = ["async_tokio"] }

[lib]
bench = false

[[bench]]
name = "sim_benchmark"
harness = false
