[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "snake"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
alator = { "path"="../../" }
rand = "0.8.4"
rand_distr = "0.4.1"
