[package]
name = "snake"
version = "0.1.0"
edition = "2021"
authors = ["test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "snake"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"]}
alator = { path = "../../", features = ["python"] }
rand = "0.8.4"
rand_distr = "0.4.1"
