[package]
name = "snake"
version = "0.1.0"
edition = "2021"
authors = ["test"]

[lib]
name = "snake"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"]}
alator = { path = "../../crates/alator", features = ["python"] }
rand = "0.8.4"
rand_distr = "0.4.1"
