[package]
name = "alator-exchange"
version = "0.1.0"
edition = "2021"

[lib]
name = "alator_exchange"
path = "src/lib.rs"

[[bin]]
name = "alator_exchange_server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = "0.10.2"
alator = "0.3.3"
tower = { version = "0.4" }

[build-dependencies]
tonic-build = "0.10"
