[package]
name = "alator"
version = "0.3.3"
authors = ["Calum Russell <calum.mj.russell@gmail.com>"]
edition = "2021"
license-file = "LICENCE"
description = "Library for backtesting investment strategies"
repository = "https://github.com/calumrussell/alator"
readme = "README.md"

[dependencies]
itertools = "0.12.0"
time = { version = "0.3.17", features = ["macros", "parsing"] }
rand = "0.8.4"
rand_distr = "0.4.1"
log = "0.4.17" 
env_logger = "0.10.0"
pyo3 = { version = "0.20.0", optional = true }
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

[dev-dependencies]
reqwest = { version = "0.11.11", features=["blocking"] }
zip = "0.6.2"
csv = "1.1.6"
criterion = { version="0.5.1", features= ["async_tokio"] }

[features]
python = ["dep:pyo3"] 

[lib]
bench = false

[[bench]]
name = "sim_benchmark"
harness = false
